<resources>
    <string name="app_name">E-Cigarette liquid recipe</string>
    <string name="amount_to_make">Amount to make</string>
    <string name="desired_strength">Desired strength</string>
    <string name="water_vodka_pga">Water/Vodka/PGA</string>
    <string name="desired_pg">Desired PG</string>
    <string name="desired_vg">Desired VG</string>
    <string name="nicotine_strength">Nicotine strength</string>
    <string name="pg_content_of_nicotine">PG-content of nicotine</string>
    <string name="vg_content_of_nicotine">VG-content of nicotine</string>
    <string name="add_flavor">Add flavor</string>
    <string name="flavor_1">Flavor 1</string>
    <string name="flavor_2">Flavor 2</string>
    <string name="flavor_3">Flavor 3</string>
    <string name="edit_flavor">Edit flavor name</string>
    <string name="create">Create</string>
    <string name="ml">ml</string>
    <string name="grams">Grams</string>
    <string name="nicotine_juice">Nicotine juice</string>
    <string name="pg_dilutant">Propylene Glycol</string>
    <string name="vg_dilutant">Vegetable Glycerin</string>
    <string name="water_vodka_pga_str">Water/Vodka/PGA</string>

    <string name="banner_home_footer">ca-app-pub-7116840615884768/9296304134</string>
    <string name="banner_result">ca-app-pub-7116840615884768/1773037334</string>
    <string name="share">Share</string>
    <string name="save">Save</string>
    <string name="liquid_name">Liquid name</string>
    <string name="enter_name">Enter name</string>
    <string name="enjoying">Enjoying E-Cigarette liquid recipe?</string>
    <string name="rta_dialog_title">Rate this app</string>
    <string name="rta_dialog_message">How about a rating on the Play Store, then?</string>
    <string name="rta_dialog_ok">Ok, sure</string>
    <string name="rta_dialog_cancel">Later</string>
    <string name="rta_dialog_no">No, thanks</string>
    <string name="would_you_mind">Would you mind giving us some feedback?</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_new_recipe">Create new recipe</string>
    <string name="my_recipes">My recipes</string>
    <string name="delete">Delete</string>
    <string name="no_recipe">You have\'n saved recipes</string>
    <string name="title_activity_d">d</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="ok">OK</string>
    <string name="vape">Vape</string>
    <string name="email">alexiddev@gmail.com</string>
    <string name="enter_any_two_variables">Enter any two variables</string>
    <string name="calculate">Calculate</string>
    <string name="ohms_law_calculator">Ohms Law Calculator</string>
    <string name="number_of_wires">Number of wires</string>
    <string name="number_of_spirals">Number of spirals</string>
    <string name="spiral_type">Spiral type</string>
    <string name="normal">Normal</string>
    <string name="micro">Micro</string>
    <string name="clapton">Clapton</string>
    <string name="diameter_of_wire">The diameter of the wire</string>
    <string name="the_diameter_of_the_coil">The diameter of the coil</string>
    <string name="number_of_turns">Number of turns</string>
    <string name="legs_length">Legs length</string>
    <string name="type_wire">Type wire</string>

    <string-array name="wire_diam">
        <item>0.10 mm (AWG 38)</item>
        <item>0.11 mm (AWG 37)</item>
        <item>0.12 mm (AWG 36)</item>
        <item>0.14 mm (AWG 35)</item>
        <item>0.15 mm</item>
        <item>0.16 mm (AWG 34)</item>
        <item>0.18 mm (AWG 33)</item>
        <item>>0.20 mm (AWG 32)</item>
        <item>0.22 mm (AWG 31)</item>
        <item>>0.25 mm (AWG 30)</item>
        <item>0.28 mm (AWG 29)</item>
        <item>0.30 mm</item>
        <item>0.32 mm (AWG 28)</item>
        <item>0.35 mm</item>
        <item>0.36 mm (AWG 27)</item>
        <item>0.38 mm</item>
        <item>0.40 mm (AWG 26)</item>
        <item>0.45 mm (AWG 25)</item>
        <item>0.50 mm</item>
        <item>0.51 mm (AWG 24)</item>
        <item>0.57 mm (AWG 23)</item>
        <item>0.60 mm</item>
        <item>0.63 mm</item>
        <item>0.64 mm (AWG 22)</item>
        <item>0.70 mm</item>
        <item>0.71 mm (AWG 21)</item>
        <item>0.80 mm</item>
        <item>0.81 mm (AWG 20)</item>
        <item>0.90 mm</item>
        <item>0.91 mm (AWG 19)</item>
        <item>1.0 mm</item>
        <item>1.02 mm (AWG 18)</item>
    </string-array>

    <string-array name="coil_diam">
        <item>0.5 mm</item>
        <item>0.6 mm</item>
        <item>0.7 mm</item>
        <item>0.8 mm</item>
        <item>0.9 mm</item>
        <item>1 mm</item>
        <item>1.25 mm</item>
        <item>1.5 mm</item>
        <item>1.75 mm</item>
        <item>2 mm</item>
        <item>2.25 mm</item>
        <item>2.5 mm</item>
        <item>2.75 mm</item>
        <item>3 mm</item>
        <item>3.5 mm</item>
        <item>4 mm</item>
    </string-array>


    <string-array name="numbers_off_turns">
        <item>1</item>
        <item>1.5</item>
        <item>2</item>
        <item>2.5</item>
        <item>3</item>
        <item>3.5</item>
        <item>4</item>
        <item>4.5</item>
        <item>5</item>
        <item>5.5</item>
        <item>6</item>
        <item>6.5</item>
        <item>7</item>
        <item>7.5</item>
        <item>8</item>
        <item>8.5</item>
        <item>9</item>
        <item>9.5</item>
        <item>10</item>
        <item>10.5</item>
        <item>11</item>
        <item>11.5</item>
        <item>12</item>
        <item>12.5</item>
        <item>13</item>
        <item>13.5</item>
        <item>14</item>
        <item>14.5</item>
        <item>15</item>
        <item>15.5</item>
        <item>16</item>
        <item>16.5</item>
        <item>17</item>
        <item>17.5</item>
        <item>18</item>
        <item>18.5</item>
        <item>19</item>
        <item>19.5</item>
        <item>20</item>
    </string-array>


    <string-array name="legs_length">
        <item>2x0 mm</item>
        <item>2x0.5 mm</item>
        <item>2x1 mm</item>
        <item>2x1.5 mm</item>
        <item>2x2 mm</item>
        <item>2x2.5 mm</item>
        <item>2x3 mm</item>
        <item>2x4 mm</item>
        <item>2x5 mm</item>
    </string-array>

    <string-array name="type_wire">
        <item>Nickel 200 (Ni)</item>
        <item>NiFe30</item>
        <item>Dicodes Resist</item>
        <item>NiFe48</item>
        <item>Titanium (Ti)</item>
        <item>SS AISI 316</item>
        <item>SS AISI 304</item>
        <item>Nichrome Ni80</item>
        <item>Nichrome Ni60</item>
        <item>Kanthal 1.39</item>
        <item>Kanthal D 1.35</item>
        <item>Kanthal A1</item>
    </string-array>

    <!--http://e-liquid-recipes.com/create-->
    <!--http://www.danstools.com/javascript-beautify/    -->
    <!--https://www.misthub.com/blogs/vape-tutorials/76788933-tutorial-ohms-law-and-vape-safety-calculator-->

    <!--http://reprova.com/calc/-->
    <!--http://reprova.com/calc/js/main.js-->

</resources>
