<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_create_new_recipe"
            android:icon="@drawable/ic_add_circle_outline_black_24dp1"
            android:title="@string/create_new_recipe" />
        <item
            android:id="@+id/nav_saved"
            android:icon="@drawable/ic_invert_colors_black_24dp"
            android:title="@string/my_recipes" />
        <item
            android:id="@+id/nav_voltage"
            android:icon="@drawable/voltage"
            android:title="@string/ohms_law_calculator" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
        </menu>
    </item>

</menu>
