<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/smoke_cloud"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.recipe.main_recipe.ResultFragment">


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linearLayout"
        android:layout_weight="1"
        android:fillViewport="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/number_of_wires"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <include
                android:layout_marginTop="10dp"
                layout="@layout/radio_button_layout_wires"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center" />


            <TextView
                android:layout_marginTop="20dp"
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/number_of_spirals"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <include
                android:layout_marginTop="10dp"
                layout="@layout/radio_button_layout_spirals"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center" />

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/spiral_type"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <include
                android:layout_marginTop="10dp"
                layout="@layout/radio_button_layout_spiral_type"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center" />

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/diameter_of_wire"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <com.rey.material.widget.Spinner
            android:layout_marginTop="10dp"
            android:id="@+id/spinnerWareDiam"
            style="@style/Material.Widget.Spinner"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:foregroundGravity="center"
            ads:spn_labelTextSize="40dp"
            android:entries="@array/wire_diam"
            app:rd_style="@style/Material.Drawable.Ripple.Wave" />

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/the_diameter_of_the_coil"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <com.rey.material.widget.Spinner
                android:layout_marginTop="10dp"
                android:id="@+id/spinnerCoilDiam"
                style="@style/Material.Widget.Spinner"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:foregroundGravity="center"
                ads:spn_labelTextSize="40dp"
                android:entries="@array/coil_diam"
                app:rd_style="@style/Material.Drawable.Ripple.Wave" />

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/number_of_turns"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <com.rey.material.widget.Spinner
                android:layout_marginTop="10dp"
                android:id="@+id/spinnerTurns"
                style="@style/Material.Widget.Spinner"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:foregroundGravity="center"
                ads:spn_labelTextSize="40dp"
                android:entries="@array/coil_diam"
                app:rd_style="@style/Material.Drawable.Ripple.Wave" />

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/legs_length"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <com.rey.material.widget.Spinner
                android:layout_marginTop="10dp"
                android:id="@+id/spinnerLegs"
                style="@style/Material.Widget.Spinner"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:foregroundGravity="center"
                ads:spn_labelTextSize="40dp"
                android:entries="@array/legs_length"
                app:rd_style="@style/Material.Drawable.Ripple.Wave" />

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/type_wire"
                android:textColor="@color/black"
                android:textSize="20dp" />

            <com.rey.material.widget.Spinner
                android:layout_marginTop="10dp"
                android:id="@+id/spinnerTypeWire"
                style="@style/Material.Widget.Spinner"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:foregroundGravity="center"
                ads:spn_labelTextSize="40dp"
                android:entries="@array/type_wire"
                app:rd_style="@style/Material.Drawable.Ripple.Wave" />


        </LinearLayout>


    </ScrollView>




    <!--<com.rey.material.widget.Button-->

        <!--android:id="@+id/button"-->
        <!--style="@style/Widget.AppCompat.Button.Colored"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="60dp"-->
        <!--android:layout_gravity="center"-->
        <!--android:background="@drawable/press_button"-->
        <!--android:text="@string/create"-->
        <!--app:rd_enable="true"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:layout_alignParentRight="true"-->
        <!--android:layout_alignParentEnd="true" />-->


</RelativeLayout>
