<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="vape.val.liquid.ResultActivity"
    android:background="@drawable/smoke_cloud">



    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/layout_border">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/ml"
            android:textSize="25dp"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:gravity="center"
            android:id="@+id/textView" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/grams"
            android:layout_weight="1"
            android:textSize="25dp"
            android:textColor="@color/black"
            android:gravity="center"
            android:id="@+id/textView2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="%"
            android:textSize="25dp"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:gravity="center"
            android:id="@+id/textView3" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="vertical"
        android:background="@drawable/layout_border">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/nicotine_juice"
        android:textSize="18dp"
        android:textColor="@color/black"
        android:gravity="center"
        android:id="@+id/textView4" />


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="0"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:gravity="center"
            android:id="@+id/nicotine_juice_ml" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="0"
            android:layout_weight="1"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:gravity="center"
            android:id="@+id/nicotine_juice_gramm" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="0"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:gravity="center"
            android:id="@+id/nicotine_juice_per" />

    </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="vertical"
        android:background="@drawable/layout_border">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/pg_dilutant"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:gravity="center"
            android:id="@+id/pg_dilutant"
            />


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="0"
                android:textSize="18dp"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:gravity="center"
                android:id="@+id/pg_dilutant_ml" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="0"
                android:layout_weight="1"
                android:textSize="18dp"
                android:textColor="@color/black"
                android:gravity="center"
                android:id="@+id/pg_dilutant_gramm" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="0"
                android:textSize="18dp"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:gravity="center"
                android:id="@+id/pg_dilutant_per" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="vertical"
        android:background="@drawable/layout_border">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/vg_dilutant"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:gravity="center"
            android:id="@+id/vg_dilutant"
            />


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="0"
                android:textSize="18dp"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:gravity="center"
                android:id="@+id/vg_dilutant_ml" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="0"
                android:layout_weight="1"
                android:textSize="18dp"
                android:textColor="@color/black"
                android:gravity="center"
                android:id="@+id/vg_dilutant_gramm" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="0"
                android:textSize="18dp"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:gravity="center"
                android:id="@+id/vg_dilutant_per" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="vertical"
        android:background="@drawable/layout_border">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/water_vodka_pga_str"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:gravity="center"
            android:id="@+id/water"
            />


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="0"
                android:textSize="18dp"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:gravity="center"
                android:id="@+id/wvg_ml" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="0"
                android:layout_weight="1"
                android:textSize="18dp"
                android:textColor="@color/black"
                android:gravity="center"
                android:id="@+id/wvg_gramm" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="0"
                android:textSize="18dp"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:gravity="center"
                android:id="@+id/wvg_per"/>

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="vertical"
        android:id="@+id/layout_aroma_1"
        android:background="@drawable/layout_border">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/flavor_1"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:gravity="center"
            android:id="@+id/aroma_1"
            />


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="0"
                android:textSize="18dp"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:gravity="center"
                android:id="@+id/flavor_1_ml" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="0"
                android:layout_weight="1"
                android:textSize="18dp"
                android:textColor="@color/black"
                android:gravity="center"
                android:id="@+id/flavor_1_gramm" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="0"
                android:textSize="18dp"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:gravity="center"
                android:id="@+id/flavor_1_per"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="vertical"
        android:id="@+id/layout_aroma_2"
        android:background="@drawable/layout_border">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/flavor_2"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:gravity="center"
            android:id="@+id/aroma_2"
            />


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="0"
                android:textSize="18dp"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:gravity="center"
                android:id="@+id/flavor_2_ml" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="0"
                android:layout_weight="1"
                android:textSize="18dp"
                android:textColor="@color/black"
                android:gravity="center"
                android:id="@+id/flavor_2_gramm" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="0"
                android:textSize="18dp"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:gravity="center"
                android:id="@+id/flavor_2_per"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="vertical"
        android:id="@+id/layout_aroma_3"
        android:background="@drawable/layout_border">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/flavor_3"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:gravity="center"
            android:id="@+id/aroma_3"
            />


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="0"
                android:textSize="18dp"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:gravity="center"
                android:id="@+id/flavor_3_ml" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="0"
                android:layout_weight="1"
                android:textSize="18dp"
                android:textColor="@color/black"
                android:gravity="center"
                android:id="@+id/flavor_3_gramm" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="0"
                android:textSize="18dp"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:gravity="center"
                android:id="@+id/flavor_3_per"/>

        </LinearLayout>


    </LinearLayout>
        </LinearLayout>

    </ScrollView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_home_footer">
    </com.google.android.gms.ads.AdView>


</LinearLayout>
